--- a/server-side/package.json
+++ b/server-side/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec babel-node ./bin/www"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
@@ -14,6 +20,7 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "pg": "^7.0.2",
@@ -23,6 +30,7 @@
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0"
   }
