contains app settings

--- a/server-side/server/config/config.json
+++ b/server-side/server/config/config.json
@@ -4,7 +4,8 @@
     "password": "oracle",
     "database": "postgres",
     "host": "localhost",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "secretKey": "123$&65498&6655"
   },
   "test": {
     "username": "postgres",
