--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server-side/bin/www"
+    "start": "./node_modules/.bin/babel-node ./server-side/bin/www",
+    "dev": "node --exec babel ./server-side/bin/www"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
