--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,9 @@
   "root": true,
   "extends": "airbnb-base",
   "env": {
-    "node": true,
-    "es6": true,
-    "mocha": true
+  "node": true,
+  "es6": true,
+  "mocha": true
   },
   "rules": {
     "one-var": 0,
@@ -14,7 +14,8 @@
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": [2, { "commonjs": true }],
+    "import/no-unresolved": [0, { commonjs: true, amd: true }],
+    "max-len": [2, 80, 2],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
@@ -23,11 +24,11 @@
       "requireReturnDescription": true
     }],
     "require-jsdoc": ["error", {
-        "require": {
-            "FunctionDeclaration": true,
-            "MethodDefinition": true,
-            "ClassDeclaration": true
-        }
+      "require": {
+        "FunctionDeclaration": true,
+        "MethodDefinition": true,
+        "ClassDeclaration": true
+      }
     }]
   }
 }
