--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
-- '6'
+  - 6
+after_success: npm run coverage
+services:
+  - postgresql
 before_script:
-- npm install
-script: npm test
-
+  - psql -c "create database travis;" -U postgres
+  - npm install -g mocha
+  - npm install -g nyc
+  - npm install -g sequelize-cli
+script:
+  - npm test
+after_script:
+  - npm run coverage
