--- a/package.json
+++ b/package.json
@@ -1,44 +1,117 @@
 {
-  "name": "server-side",
-  "version": "0.0.0",
+  "name": "temmyogunbo",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/babel-node ./bin/www",
-    "dev": "node --exec babel-node ./bin/www",
-    "test": "mocha ./server/test/ --compilers js:babel-core/register"
+    "start": "./node_modules/.bin/babel-node ./server/bin/www",
+    "dev": "npm run build:dev",
+    "build:dev": "webpack && babel-node -- server/bin/www && nodemon server/bin/www",
+    "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
+    "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
+  },
+   "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "html"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "exclude": [
+      "server/test"
+    ]
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
     "cookie-parser": "^1.4.3",
+    "coveralls": "^2.13.1",
+    "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
+    "draft-js": "^0.10.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "immutable": "^3.8.1",
+    "istanbul": "^0.4.5",
     "jade": "~1.11.0",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^7.4.2",
+    "jwt-decode": "^2.2.0",
     "mocha": "^3.5.0",
     "morgan": "^1.8.2",
+    "node-sass": "^4.0.0",
+    "nyc": "^11.0.2",
     "path": "^0.12.7",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
+    "react-draft-wysiwyg": "^1.10.0",
+    "react-materialize": "^1.0.1",
+    "react-paginate": "^4.4.3",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-test-renderer": "^15.6.1",
+    "redux": "^2.0.0",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.7.0",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babel-plugin-istanbul": "^4.1.4",
+    "coveralls": "^2.13.1",
+    "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "nyc": "^11.0.2",
     "pg": "^6.4.0"
   }
 }
