--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node ./server/bin/www",
     "dev": "npm run build:dev",
-    "build:dev": "webpack && babel-node -- server/bin/www && nodemon server/bin/www",
+    "build:dev": "webpack-dev-server --hot --inline --open && babel-node -- server/bin/www",
     "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
   },
-   "nyc": {
+  "nyc": {
     "require": [
       "babel-register"
     ],
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -54,12 +55,15 @@
     "express-validator": "^3.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "history": "^4.7.2",
     "immutable": "^3.8.1",
     "istanbul": "^0.4.5",
     "jade": "~1.11.0",
+    "jquery": "^3.2.1",
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^7.4.2",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.4",
     "mocha": "^3.5.0",
     "morgan": "^1.8.2",
     "node-sass": "^4.0.0",
@@ -67,6 +71,7 @@
     "path": "^0.12.7",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
@@ -76,14 +81,18 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-link": "^2.0.2",
     "react-test-renderer": "^15.6.1",
     "redux": "^2.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
+    "toastr": "^2.1.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.10.2",
@@ -94,6 +103,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -103,15 +113,18 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "babel-plugin-istanbul": "^4.1.4",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.3.0",
+    "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.2",
-    "pg": "^6.4.0"
+    "pg": "^6.4.0",
+    "toastr": "^2.1.2",
+    "webpack-dev-server": "^2.7.1"
   }
 }
