--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: node_js
+
 node_js:
-  - 6
-after_success: npm run coverage
+  - node
+
 services:
   - postgresql
+
 before_script:
-  - npm install -g mocha
-  - npm install -g nyc
-  - npm install -g sequelize-cli
-script:
-  - npm test
-after_script:
+  - npm install -g codeclimate-test-reporter
+  - psql -c 'drop database if exists hellobooks;' -U postgres
+  - psql -c 'create database hellobooks;' -U postgres
+  - psql -c "create user andeladeveloper with login password 'oracle';" -U postgres
+
+env:
+  - NODE_ENV=test
+
+after_success:
   - npm run coverage
+  - codeclimate-test-reporter < coverage/lcov.info
