--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "npm run build:dev",
     "build:dev": "webpack-dev-server --hot --inline --open && babel-node -- server/bin/www",
     "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
-    "test": "cross-env NODE_ENV=test mocha --timeout 150000 --compilers js:babel-register ./server/test/**/*.js",
-    "test:nyc": "cross-env NODE_ENV=test nyc --reporter=html mocha --timeout 150000 --compilers js:babel-register ./server/test/**/*.js",
+    "test:nyc": "cross-env NODE_ENV=test mocha --timeout 150000 --compilers js:babel-register ./server/test/**/*.js",
+    "test": "cross-env NODE_ENV=test nyc --reporter=html mocha --timeout 150000 --compilers js:babel-register ./server/test/**/*.js",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "nyc": {
