--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
+    "sweetalert2": "^6.8.0",
     "toastr": "^2.1.2",
     "url-loader": "^0.5.9",
     "validator": "^8.2.0",
