--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "6.11.2",
   "private": true,
   "scripts": {
-    "start": "nodemon --watch server --exec babel-node -- ./server/bin/www.js",
+    "start": "babel-node -- server/bin/www.js",
     "dev": "npm run build:dev",
-    "build:dev": "webpack-dev-server --hot --inline --open && babel-node -- server/bin/www",
+    "build:dev": "nodemon --watch server --exec babel-node -- ./server/bin/www.js",
     "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
