--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "babel-node -- server/bin/www.js",
     "dev": "npm run build:dev",
-    "build:dev": "nodemon --watch server --exec babel-node -- ./server/bin/www.js",
+    "build:dev": "nodemon --watch server --exec babel-node -- ./server/bin/www.js test:watch",
     "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
+    "test:watch": "npm run test -- --watch",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "nyc": {
