--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "body-parser": "^1.17.2",
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
+    "cloudinary": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "coveralls": "^2.13.1",
     "css-loader": "^0.28.5",
@@ -76,7 +77,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "react-draft-wysiwyg": "^1.10.0",
-    "react-materialize": "^1.0.1",
+    "react-materialize": "^1.0.14",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
@@ -88,6 +89,7 @@
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "sendgrid": "^5.2.3",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
@@ -119,8 +121,9 @@
     "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
     "file-loader": "^0.11.2",
     "istanbul": "^0.4.5",
