--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai-http": "^3.0.0",
     "cloudinary": "^1.9.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "coveralls": "^2.13.1",
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
