--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.4",
     "draft-js": "^0.10.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.1",
