--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
 
 services:
   - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 env:
   - NODE_ENV=test
