--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,25 @@
 {
   "root": true,
-  "extends": [ "airbnb-base" ],
+  "extends": [ "airbnb-base", "react" ],
   "env": {
     "node": true,
     "es6": true,
-    "mocha": true
+    "mocha": true,
+    "browser": true
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    }
   },
   "rules": {
     "one-var": 0,
+    "indent": ["error", 2],
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "consistent-return": 0,
@@ -17,6 +29,11 @@
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
+    "class-methods-use-this": ["error", {
+        "exceptMethods": [
+          "handleReturnBook"
+        ]
+      }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
       "requireReturnType": true,
