--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
+  global:
+    - CC_TEST_REPORTER_ID=$CODECLIMATE_REPO_TOKEN
+    - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
 language: node_js
+script:
+  - bundle exec rspec
+  # Preferably you will run test-reporter on branch update events. But
+  # if you setup travis to build PR updates only, you don't need to run
+  # the line below
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
+  # In the case where travis is setup to build PR updates only,
+  # uncomment the line below
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 node_js:
   - node
@@ -6,11 +18,17 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-
-env:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - npm install -g codeclimate-test-reporter
+  - npm install -g sequelize
+  - psql -c 'drop database if exists testdb;' -U postgres
+  - psql -c 'create database testdb;' -U postgres
+  - psql -c "CREATE USER emmanuelhellobooks WITH PASSWORD 'emmanuel';" -U postgres
   - NODE_ENV=test
-
+script:
+  - npm test
 after_success:
   - npm run coverage
   - codeclimate-test-reporter < coverage/lcov.info
+  - coveralls < coverage/lcov.info
