--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
     "test:watch": "npm run test -- --watch",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
-    "client:dev": "webpack-dev-server"
+    "client:dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "nyc": {
     "require": [
@@ -24,13 +25,14 @@
     "sourceMap": false,
     "instrument": false,
     "exclude": [
-      "server/test"
+      "server/test",
+      "server/seeders",
+      "server/config"
     ]
   },
   "dependencies": {
     "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -43,33 +45,25 @@
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "chai": "^4.1.1",
-    "chai-http": "^3.0.0",
     "cloudinary": "^1.9.0",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "coveralls": "^2.13.1",
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "draft-js": "^0.10.1",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.1",
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "immutable": "^3.8.1",
-    "istanbul": "^0.4.5",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^7.4.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.5.0",
     "morgan": "^1.8.2",
     "node-sass": "^4.0.0",
     "path": "^0.12.7",
@@ -80,6 +74,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "react-draft-wysiwyg": "^1.10.0",
+    "react-google-login": "^3.0.2",
     "react-materialize": "^1.0.14",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
@@ -96,44 +91,43 @@
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
+    "shortid": "^2.2.8",
     "style-loader": "^0.18.2",
+    "swagger-jsdoc": "^1.9.7",
     "sweetalert2": "^6.8.0",
     "toastr": "^2.1.2",
     "url-loader": "^0.5.9",
     "validator": "^8.2.0",
-    "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
-    "eslint": "^4.3.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.4.0",
     "file-loader": "^0.11.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "nyc": "^10.3.2",
-    "pg": "^6.4.0",
-    "toastr": "^2.1.2",
-    "webpack-dev-server": "^2.9.3"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
+    "webpack-merge": "^4.1.1"
   }
 }
