--- a/package.json
+++ b/package.json
@@ -96,10 +96,11 @@
     "swagger-jsdoc": "^1.9.7",
     "sweetalert2": "^6.8.0",
     "toastr": "^2.1.2",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.5.9",
     "validator": "^8.2.0",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -128,6 +129,7 @@
     "nyc": "^10.3.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3",
-    "webpack-merge": "^4.1.1"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
