--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "test:watch": "npm run test -- --watch",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
     "client:dev": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js -p --progress --colors",
-    "heroku-postbuild": "npm run build"
-  },
+    "build": "webpack --config webpack.prod.js",
+"heroku-postbuild": "cd client && npm i && npm run build && cd ../ && npm run build"  },
   "engines": {
     "node": "6.11.1"
   },
