--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
     "shortid": "^2.2.8",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.18.2",
     "swagger-jsdoc": "^1.9.7",
     "sweetalert2": "^6.8.0",
@@ -113,6 +115,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.2",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -131,12 +134,13 @@
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^0.11.2",
     "istanbul": "^0.4.5",
+    "jest": "^21.2.1",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "nyc": "^10.3.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
     "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.9.3",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
