--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",        
+    "file-loader": "^0.11.2",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "immutable": "^3.8.1",
@@ -151,6 +151,7 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "nyc": "^10.3.2",
+    "sinon": "^4.1.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.9.3",
