chore(client-server):separate client from server

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,17 +4,13 @@
   "env": {
     "node": true,
     "es6": true,
-    "mocha": true,
-    "browser": true,
-    "jest": true
+    "mocha": true
   },
   "settings": {
     "import/resolver": {
       "node": {
         "extensions": [
-          ".js",
-          ".jsx"
-        ]
+          ".js"        ]
       }
     }
   },
