--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": " webpack-dev-server --config webpack.config.js",
-    "test": "jest app/test/**/*.spec.* --coverage",
+    "test": "jest app/__tests__/**/*.spec.* --coverage",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js -p"
   },
   "jest": {
