--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "front end development ",
   "main": "index.js",
   "scripts": {
-    "start": " webpack-dev-server --config webpack.config.js",
-    "test": "jest app/test/**/*.spec.* --coverage",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js",
+    "test": "jest app/__tests__/**/*.spec.* --coverage",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js -p"
   },
   "jest": {
@@ -18,6 +18,7 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
@@ -25,8 +26,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "cloudinary": "^1.9.0",
-    "cross-env": "^5.1.1",
     "cron": "^1.3.0",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
