--- a/package.json
+++ b/package.json
@@ -75,51 +75,19 @@
     "path": "^0.12.7",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
-    "react-draft-wysiwyg": "^1.10.0",
-    "react-google-login": "^3.0.2",
-    "react-js-pagination": "^3.0.0",
-    "react-materialize": "^1.0.14",
-    "react-paginate": "^4.4.3",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-router-link": "^2.0.2",
-    "react-tabs": "^2.1.1",
-    "react-test-renderer": "^15.6.1",
-    "react-timeago": "^3.4.3",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-mock-store": "^1.3.0",
-    "redux-thunk": "^2.2.0",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "save-dev": "^2.0.0",
+       "save-dev": "^2.0.0",
     "sendgrid": "^5.2.3",
     "sequelize": "^4.13.5",
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
-    "shortid": "^2.2.8",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
-    "style-loader": "^0.18.2",
-    "swagger-jsdoc": "^1.9.7",
-    "sweetalert2": "^6.8.0",
-    "toastr": "^2.1.2",
-    "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.5.9",
-    "validator": "^8.2.0",
-    "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1"
+    "validator": "^8.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.2",
-    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -129,8 +97,6 @@
     "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -138,17 +104,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "expect": "^21.2.1",
-    "fetch-mock": "^5.13.1",
     "istanbul": "^0.4.5",
-    "jest": "^21.2.1",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
-    "nyc": "^10.3.2",
-    "sinon": "^4.1.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.9.3",
-    "webpack-hot-middleware": "^2.18.0"
+    "nyc": "^10.3.2"
   }
 }
