--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "6.11.2",
   "private": true,
   "scripts": {
-    "start": "babel-node -- server/bin/www.js",
+    "start": "cross-env NODE_ENV=production node server/dist/bin/www.js",
+    "build": "rm -rf server/dist && babel server/ --out-dir server/dist/ --copy-files",
+    "start:dev": "babel-node -- server/bin/www.js",
     "dev": "npm run build:dev",
     "build:dev": "nodemon --watch server --exec babel-node -- ./server/bin/www.js test:watch",
     "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
     "test:watch": "npm run test -- --watch",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
-    "heroku-postbuild": "cd client && npm i &&  npm run build"
+    "heroku-postbuild": "cd client && npm i &&  npm run build && cd ../ && npm run build"
   },
   "engines": {
     "node": "6.11.1"
@@ -50,6 +52,7 @@
     "cloudinary": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "cron": "^1.3.0",
+    "cross-env": "^5.1.1",        
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
@@ -75,7 +78,7 @@
     "path": "^0.12.7",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
-       "save-dev": "^2.0.0",
+    "save-dev": "^2.0.0",
     "sendgrid": "^5.2.3",
     "sequelize": "^4.13.5",
     "sequelize-cli": "^2.7.0",
@@ -96,7 +99,7 @@
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
