--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -62,24 +62,27 @@
                 ]
             }
         ],
-        "valid-jsdoc": [
-            "error",
-            {
-                "requireReturn": true,
-                "requireReturnType": true,
-                "requireParamDescription": false,
-                "requireReturnDescription": true
+      "valid-jsdoc": [
+        "error",
+        {
+            "requireReturn": true,
+            "requireReturnType": true,
+            "requireParamDescription": false,
+            "requireReturnDescription": true,
+            "matchDescription": ".+"
+        }
+    ],
+    "require-jsdoc": [
+        "error",
+        {
+            "require": {
+                "FunctionDeclaration": true,
+                "MethodDefinition": true,
+                "ClassDeclaration": true,
+                "ArrowFunctionExpression": true,
+                "FunctionExpression": true
             }
-        ],
-        "require-jsdoc": [
-            "error",
-            {
-                "require": {
-                    "FunctionDeclaration": true,
-                    "MethodDefinition": true,
-                    "ClassDeclaration": true
-                }
-            }
-        ]
+        }
+    ]
     }
 }
