--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "6.11.2",
   "private": true,
   "scripts": {
+    "e2e-setup": "selenium-standalone install",
     "start": "cross-env NODE_ENV=production node server/dist/bin/www.js",
     "build": "rm -rf server/dist && babel server/ --out-dir server/dist/ --copy-files",
     "start:dev": "babel-node -- server/bin/www.js",
@@ -43,16 +44,16 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",        
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cloudinary": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "cron": "^1.3.0",
-    "cross-env": "^5.1.1",        
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
@@ -92,6 +93,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -110,6 +112,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
-    "nyc": "^10.3.2"
+    "nyc": "^10.3.2",
+    "selenium-standalone": "^6.12.0"
   }
 }
