--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "e2e-setup": "selenium-standalone install",
+    "e2e-test": "npm run pretest && selenium-standalone start",
     "start": "cross-env NODE_ENV=production node server/dist/bin/www.js",
     "build": "rm -rf server/dist && babel server/ --out-dir server/dist/ --copy-files",
     "start:dev": "babel-node -- server/bin/www.js",
