chore(e2e):inrease test coverage

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "e2e-setup": "selenium-standalone install",
-    "e2e-test": "npm run pretest && selenium-standalone start",
+    "e2e-test": "selenium-standalone start",
+    "start-e2e": "npm run pretest && nightwatch",
     "start": "cross-env NODE_ENV=production node server/dist/bin/www.js",
     "build": "rm -rf server/dist && babel server/ --out-dir server/dist/ --copy-files",
     "start:dev": "babel-node -- server/bin/www.js",
     "dev": "npm run build:dev",
     "build:dev": "nodemon --watch server --exec babel-node -- ./server/bin/www.js test:watch",
-    "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
+    "pretest": "npm run cleardb && cross-env NODE_ENV=test sequelize db:migrate  && cross-env NODE_ENV=test sequelize db:seed:all",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 ./server/test/**/*.js",
     "test:watch": "npm run test -- --watch",
     "cleardb": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
