--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-core": "^6.25.0",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -62,6 +62,7 @@
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "draft-js": "^0.10.1",
+    "ejs": "^2.5.7",
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
